fix annoying button not wrapping on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -1147,7 +1147,7 @@ a:hover {
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 450px) {
   .parts-grid {
     grid-template-columns: 1fr;
   }
